# mdbrowse

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mdb  mdbrowse.py  pyproject.toml  requirements.txt
.punchlist/: config.yaml
.serena/: project.yml
docs/: gated-sites.md  homebrew-core-readiness.md  pagination-affordance.md  x-adapter.md
tasks/: 001-rebuild-capture-bundle-article-path-end-to-end-vertical-slice.md  002-fixture-corpus-selftest-harness-golden-markdown-diffs.md  003-repeated-unit-detector-feed-grid-emitters-hn-bullets-cnn-cards.md  004-port-tui-reader-onto-new-core-structured-linkmap-no-sentinels.md  005-mcp-server-frontend-fetch-page-url-markdown-with-provenance.md  006-watch-diff-mode-git-backed-snapshots-as-sensors.md  007-screenshot-fidelity-oracle-vlm-markdown-vs-pixels-scorer.md  008-retire-legacy-mdbrowse-py-once-new-path-beats-it-on-corpus.md  009-fix-overlay-kill-rule-z-index-stacking-discriminates-modals-from-app-shell-w.md  010-feed-items-emit-as-loose-list-blank-line-between-kills-the-hn-wall-of-tex.md  011-dns-preflight-in-capture-3s-daemon-thread-resolver-check-before-goto-black.md  012-add-vim-motions-blocks-heading-jumps-y-y-yank-urls-to-pbcopy-l-hist.md  013-add-downloads-d-key-on-focused-link-image-mdb-get-url-authenticated-refe.md  014-build-speak-frontend-mdb-speak-emitter-with-slnc-pauses-reader-v-key-and.md  015-add-lynx-mode-phase-1-ddg-search-shortcut-mdb-ddg-cli-html-duckduckgo-co.md  016-add-lynx-mode-phase-2-walker-captures-get-forms-as-focusables-status-bar-in.md  (+64 more)
tests/: agent_probes.py  benchmark.py  checkin.py  test_x.py  (+7 more)
(+65 files in other folders)
