[project]
name = "mdb"
version = "2.0.0a5"
description = "Web -> deterministic markdown compiler (mdbrowse v2 core)"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "rich",
    "playwright",
    "mcp",
]

[project.scripts]
mdb = "mdb.cli:main"
mdb-mcp = "mdb.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdb"]
